--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@fch/fch-cli",
   "version": "1.0.19",
-  "description": "",
+  "description": "结合 Schemtics 打造的可兼容多端的自动化代码生成工具 A compatible and multi-terminal automated code generation tool built by combining Schemtics",
   "main": "index.js",
   "bin": {
     "fch": "bin/fch.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fch-FE/fch-cli"
   },
   "scripts": {
     "build": "tsc --build --watch",
@@ -16,7 +20,7 @@
     "release": "release-it"
   },
   "author": "ernest",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@angular-devkit/core": "^10.0.4",
     "@angular-devkit/schematics": "10.0.4",
